# src/main/java/br/com/mercadolibre/controller/stock/StockController.java
@@ -3,6 +3,7 @@ package br.com.mercadolibre.controller.stock;
 
 import br.com.mercadolibre.api.controller.StockApi;
 import br.com.mercadolibre.api.model.GetCurrentStockByProduct200Response;
+import br.com.mercadolibre.api.model.GetCurrentStockByProductAndStore200Response;
 import br.com.mercadolibre.application.stock.StockService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -22,6 +23,15 @@ public class StockController implements StockApi {
                 .quantity(currentStock)
                 .build();
 
+        return ResponseEntity.ok(response);
+    }
+
+    @Override
+    public ResponseEntity<GetCurrentStockByProductAndStore200Response> getCurrentStockByProductAndStore(String productId, String storeId) {
+        var currentStock = stockService.getCurrentStockByProductIdAndStoreId(productId, storeId);
+        var response = GetCurrentStockByProductAndStore200Response.builder()
+                .quantity(currentStock)
+                .build();
         return ResponseEntity.ok(response);
     }
 }
