# src/main/resources/swagger.yaml
@@ -111,7 +111,7 @@ paths:
             example: 660e8400-e29b-41d4-a716-446655440006
       responses:
         '200':
-          description: Estoque atual do produto
+          description: Estoque total atual do produto
           content:
             application/json:
               schema:
@@ -133,6 +133,54 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+  /stock/current/{productId}/{storeId}:
+    get:
+      tags:
+        - Stock
+      summary: Obter estoque atual por produto
+      description: Retorna o estoque atual para um produto específico.
+      operationId: getCurrentStockByProductAndStore
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          description: ID do produto
+          schema:
+            type: string
+            example: 660e8400-e29b-41d4-a716-446655440006
+        - name: storeId
+          in: path
+          required: true
+          description: ID da loja
+          schema:
+            type: string
+            example: 660e8400-e29b-41d4-a716-446655440006
+      responses:
+        '200':
+          description: Estoque atual do produto na loja específica
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  quantity:
+                    type: integer
+                    description: Quantidade parcial em estoque na loja
+                    example: 100
+        '404':
+          description: Produto não encontrado
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Erro interno do servidor
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 
 components:
   schemas:
